<resources>
    <string name="app_name">词场</string>
    <string name="splash_time">跳过</string>
    <string name="recite_head_title">未选择词书</string>
    <string name="recite_star_text">68</string>
    <string name="recite_head_task_text">今日闯关0/5</string>
    <string name="recite_task_icon_text">任务 2</string>
    <string name="recite_start_rush_text">开始闯关</string>
    <string name="recite_sign">打卡</string>
    <string name="recite_tab_revise">复习</string>
    <string name="recite_tab_pk">PK</string>
    <string name="recite_tab_group">组队</string>
    <string name="recite_tab_dynamic">动态</string>
    <string name="recite_footer_push_head_text">精品好课免费领</string>
    <string name="recite_footer_push_footer_text">学力全开 好课躺着学</string>
    <string name="word_book_now_head_text">正在学习</string>
    <string name="word_book_keep_head_text">我的收藏</string>
    <string name="item_word_book_head_text">北师大版一年级上册</string>
    <string name="item_book_number">1%</string>
    <string name="item_book_total">共3696词</string>
    <string name="book_share_text">分享了词书哦！</string>
    <string name="book_bottom_text">没有找到想要的词书?</string>
    <string name="book_bottom_help">告诉我们</string>
    <string name="book_search_hint">请输入关键词</string>
    <string name="word_book_menu_left_text">英语</string>
    <string name="word_book_menu_right_text">--</string>
    <string name="whole_language_text">汉语</string>
    <string name="item_word_book_num_text">人正在背诵</string>
    <string name="item_word_book_item_text">词</string>
    <string name="item_word_head_text">译林北师大版一年级上册</string>
    <string name="whole_item_footer_text">没有找到想要的词书？</string>
    <string name="whole_item_footer_url">告诉我们</string>
    <string name="pop_title_text">北师大版一年级上册</string>
    <string name="pop_num_left_text">共75词</string>
    <string name="pop_num_right_text">67920人正在背诵</string>
    <string name="pop_summary_text">本单词书和北师大版小学英语一年级上配套。</string>
    <string name="pop_button">开始闯关背诵</string>
    <string name="pop_share">分享词书</string>
    <string name="main_task_pop_title_text">每日背诵闯关</string>
    <string name="main_task_pop_num_text">每日约背10新词，约5分钟</string>
    <string name="main_task_pop_time_text">完成时间2019年01月17日</string>
    <string name="main_task_pop_hint_text">每日仅可修改5次闯关计划</string>
    <string name="main_task_pop_button">确定</string>
    <string name="task_button_four">确认修改</string>
    <string name="task_button_three">删除任务</string>
    <string name="task_button_two">领奖</string>
    <string name="task_button_five">领任务</string>
    <string name="recite_star_hint">词能量越多排行帮名称越高。背词或pk可获得词能量。</string>
    <string name="task_list_text">任务</string>
    <string name="task_list_select_head_text">当前任务</string>
    <string name="task_list_un_select_head_text">待领任务</string>
    <string name="task_list_title_text">每日闯关任务</string>
    <string name="task_list_summary_text">第13天 - 还剩2天背完</string>
    <string name="task_list_progress_text">进度 5/5</string>
    <string name="task_list_neck_text">x 25</string>
    <string name="task_list_neck_button_text">领奖励</string>
    <string name="task_list_task_button_text">领任务</string>
    <string name="task_list_neck_summary_text">距活动结束6天</string>
    <string name="task_list_pop_text">第11天</string>
    <string name="task_list_pop_time_text">进度 : 5/5</string>
    <string name="task_list_pop_delete_text">放弃任务</string>
    <string name="task_list_pop_summary_text">本周完成小目标:签到5天即可获得丰厚奖励哦~</string>
    <string name="task_done_text">完成任务</string>
    <string name="task_done_title_text">每日复习任务</string>
    <string name="task_done_summary_text">第1天</string>
    <string name="task_done_neck_summary_text">2019.01.21</string>
    <string name="recite_book_left_number_text">30</string>
    <string name="recite_book_right_number_text">/ 80</string>
    <string name="recite_book_left_star_text">17</string>
    <string name="recite_book_right_star_text">/ 34</string>
    <string name="recite_word_list_text">单词列表</string>
    <string name="know_text">嗞 ~ 木有已认识的单词</string>
    <string name="repeat_text">嗞 ~ 木有待复习的单词</string>
    <string name="recite_know_text">单词数</string>
    <string name="know_number">1</string>
    <string name="study_number">1</string>
    <string name="recite_item_list">按关卡排列</string>
    <string name="recite_item_manage">管理</string>
    <string name="recite_list_text">find</string>
    <string name="recite_list_text_next">v.发现，找到</string>
    <string name="recite_know_letter_head_text">第1关</string>
    <string name="recite_know_letter_text">find</string>
    <string name="recite_know_letter_text_next">v.发现，找到</string>
    <string name="recite_item_letter">按字母排列</string>
    <string name="recite_repeat_text">单词数</string>
    <string name="repeat_number">1</string>
    <string name="popup_recite_lobby_text">小U基于记忆曲线原理，并根据你对单词的掌握情况，为你智能安排复习计划。</string>
    <string name="word_manage_text">单词管理</string>
    <string name="word_manage_select">全选</string>
    <string name="word_manage_know_start">移至“需复习”</string>
    <string name="word_manage_repeat_start">移至“已认识”</string>
    <string name="word_manage_title">移至“需复习”</string>
    <string name="word_manage_message">确定要将已选的1个单词移至“需复习”吗？</string>
    <string name="pull_word_text">shoes</string>
    <string name="word_content_text_head">form</string>
    <string name="word_content_text_symbol">[f:m]</string>
    <string name="word_content_text_meaning">n.表格</string>
    <string name="word_content_text_root">词根词缀</string>
    <string name="book_tag_title">热门关键词</string>
    <string name="book_tag">日语五十音</string>
    <string name="book_header_left">英语</string>
    <string name="book_header">64</string>
    <string name="book_footer">展开更多</string>
    <string name="view_title">人教版高中必修一</string>
    <string name="view_word">286词</string>
    <string name="view_number">837043人正在背诵</string>
    <string name="book_header_right">条结果</string>
    <string name="word_content_root_text">intro(inward)+duce(to lead) →推荐；介绍；引导</string>
    <string name="word_content_text_row">列句</string>
    <string name="word_content_text_list_left">Mail me a new</string>
    <string name="word_content_text_list">form</string>
    <string name="word_content_text_list_right">,please.</string>
    <string name="word_content_text_show">显示列句释义</string>
    <string name="word_content_text_hide">路上尽是明晃晃的水坑，但雨已经停了。</string>
    <string name="word_content_text_error">报错</string>
    <string name="word_content_text_done">完成</string>
    <string name="word_details_title">第三关</string>
    <string name="word_details_unselect">取消</string>
    <string name="word_details_select">选词</string>
    <string name="word_details_num_left">新词学习 </string>
    <string name="word_details_num">10</string>
    <string name="word_details_num_right">个</string>
    <string name="item_word_details_title">national</string>
    <string name="item_word_details_meaning">adj.国家的</string>
    <string name="item_word_details_letter">[nx eee]</string>
    <string name="recite_anim_arrow">第11关</string>
    <string name="recite_anim_progress_text">1/40</string>
    <string name="recite_anim_fate">10</string>
    <string name="recite_anim_select_title">talk to</string>
    <string name="recite_anim_select_1">phr.在八月底</string>
    <string name="recite_anim_select_2">和......说话</string>
    <string name="recite_anim_select_3">adj.国家的</string>
    <string name="recite_anim_select_4">v.邀请</string>
    <string name="recite_anim_music_text">朗读</string>
    <string name="recite_anim_cram_title">See you ___.</string>
    <string name="recite_anim_cram_text">一会儿见。</string>
    <string name="recite_anim_cram_1">seaside</string>
    <string name="recite_anim_cram_4">size</string>
    <string name="recite_anim_spell_title">n.(介绍产品或服务信息的)小册子</string>
    <string name="item_recite_anim_spell_letter">h</string>
    <string name="item_recite_anim_letter">e</string>
    <string name="recite_anim_spell_error">estate</string>
    <string name="recite_anim_next">下一题</string>
    <string name="recite_anim_live_text">解析</string>
    <string name="recite_anim_error_text">重来</string>
    <string name="recite_anim_win_text">去复习</string>
    <string name="recite_anim_win_text_one">去pk竞技场</string>
    <string name="recite_anim_win_text_two">继续闯关</string>
    <string name="anim_error_gate_text">第 11 关</string>
    <string name="anim_error_gate_feel_text">胜利近在咫尺</string>
    <string name="anim_win_head_text">闯关单词</string>
    <string name="win_meaning">adj.特别的;专门的</string>
    <string name="win_name">special</string>
    <string name="error_text">释义</string>
    <string name="user_decide_register_text">注册</string>
    <string name="user_decide_login_text">登录</string>
    <string name="register_title_text">注册泸江帐号</string>
    <string name="register_login_text">登录</string>
    <string name="register_img_text">手机注册 , 领泸 江500元学习福利!</string>
    <string name="register_phone_hint_text">填写手机号</string>
    <string name="register_number_error_text">手机号码不合法</string>
    <string name="register_button_start_text">注册</string>
    <string name="register_caption_left">注册代表你已经阅读并同意</string>
    <string name="register_caption_right">《泸江用户协议》</string>
    <string name="register_extra_text">非大陆用户注册</string>
    <string name="register_cc_text">cctalk</string>
    <string name="register_qq_text">QQ</string>
    <string name="register_pass_hint_text">设置密码（8&#8211;20位字符）</string>
    <string name="login_title_text">登录泸江</string>
    <string name="login_register_text">注册</string>
    <string name="login_select_ordinary">普通登录</string>
    <string name="login_select_phone">手机快速登录</string>
    <string name="login_ordinary_forget_text">忘记密码?</string>
    <string name="login_user_hint_text">手机/用户名/邮箱</string>
    <string name="login_pass_hint_text">密码</string>
    <string name="login_button_start_text">登录</string>
    <string name="help_title">复习机制说明</string>
    <string name="help_text1">1. 复习的单词是怎么产生的？</string>
    <string name="help_text2">MAP词书 ：复习的单词来源于已闯过的关卡，闯关过程中选择不认识的单词会在之后安排复习。</string>
    <string name="help_text3">非MAP词书 ：满足以下某一个条件的单词，在之后会安排复习。</string>
    <string name="help_text4">1) 非选词模式下所有单词；</string>
    <string name="help_text5">2）选词模式下，勾选的单词；</string>
    <string name="help_text6">2. 已学单词在什么时候需要复习？</string>
    <string name="help_text7">小U会根据你每次的复习情况，结合智能记忆曲线，计算出这个单词下次的复习时间。</string>
    <string name="help_text8">3. 复习有什么特点？</string>
    <string name="help_text9">1） 可以选择特定的题型进行复习，一个单词只出一道题，只有题目做对才算完成复习。</string>
    <string name="help_text10">2） 可以分批复习单词，每次复习都可以自己选择此轮需要复习多少个单词。</string>
    <string name="help_text11">3) 当每日累计复习10个单词可获得1个词能量，累计复习30个单词可获得2个词能量，
        累计复习50个单词可获得5个词能量。当日复习超过50个单词时，词能量不再增加。</string>
    <string name="help_text12">4） 复习过程中可以把认识的单词标记为“已认识”，标为认识的单词之后就不再复习。</string>
    <string name="screen_img_text">已记住</string>
    <string name="screen_time_text">14:11</string>
    <string name="screen_week_text">周二</string>
    <string name="screen_month_text">03/05</string>
    <string name="screen_title_text">evaluate</string>
    <string name="screen_content_text">[ivijueit]</string>
    <string name="screen_close_text">取消</string>
    <string name="screen_setting_text">设定</string>
    <string name="screen_click_text">点击预览</string>
    <string name="pk_error_name">w937895433</string>
    <string name="group_level">小组等级</string>
    <string name="group_medal">小组勋章</string>
    <string name="group_share">招募分享</string>
    <string name="group_details">小组简介</string>
    <string name="group_member">小组成员</string>
    <string name="pop_star_one">词能量 5</string>
    <string name="pop_star_two">词能量 10</string>
    <string name="pop_star_three">词能量 15</string>
    <string name="pop_star_four">词能量 20</string>
    <string name="pop_star_five">词能量 25</string>
    <string name="pk_modern_time">一天前</string>
    <string name="pk_modern_word">星火小学词汇(词汇进阶版)</string>
    <string name="pk_modern_know">知道了</string>
    <string name="pk_modern_error">取消了对你的邀请</string>
    <string name="group_star">修改目标</string>
    <string name="group_manage">小组管理</string>
</resources>