<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/default_margin_size_9"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_margin_size"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/group_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_size_2_1"
        android:text="@string/group_level"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_16sp" />

    <TextView
        android:id="@+id/group_medal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_size_2_1"
        android:text="@string/group_medal"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_16sp" />

    <TextView
        android:id="@+id/group_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_size_2_1"
        android:text="@string/group_share"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_16sp" />

    <TextView
        android:id="@+id/group_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_size_2_1"
        android:text="@string/group_star"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/group_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_size_2_1"
        android:text="@string/group_details"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_16sp" />

    <TextView
        android:id="@+id/group_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_member"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_16sp" />

    <TextView
        android:id="@+id/group_manage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_manage"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_16sp"
        android:visibility="gone" />
</LinearLayout>
