<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            app:contentInsetStart="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin_size">
                <ImageView
                    android:id="@+id/help_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/group_medal_detail_back_icon"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_size_18sp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin_size"
        android:overScrollMode="never"
        android:background="@drawable/btn_background_radius">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin_size_2"
            android:paddingEnd="@dimen/default_margin_size_2"
            android:paddingBottom="@dimen/default_margin_size"
            android:paddingTop="@dimen/default_margin_size_2">

            <TextView
                android:id="@+id/help_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text1"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size_18sp"
                android:layout_marginBottom="@dimen/default_margin_size_2"/>
            <TextView
                android:id="@+id/help_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text1"
                android:text="@string/help_text2"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size_2_1"/>
            <TextView
                android:id="@+id/help_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text2"
                android:text="@string/help_text3"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size"/>
            <TextView
                android:id="@+id/help_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text3"
                android:text="@string/help_text4"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size"/>
            <TextView
                android:id="@+id/help_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text4"
                android:text="@string/help_text5"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size_3"/>
            <TextView
                android:id="@+id/help_text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text5"
                android:text="@string/help_text6"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size_18sp"
                android:layout_marginBottom="@dimen/default_margin_size_2"/>
            <TextView
                android:id="@+id/help_text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text6"
                android:text="@string/help_text7"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size_3"/>
            <TextView
                android:id="@+id/help_text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text7"
                android:text="@string/help_text8"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size_18sp"
                android:layout_marginBottom="@dimen/default_margin_size_2"/>
            <TextView
                android:id="@+id/help_text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text8"
                android:text="@string/help_text9"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size"/>
            <TextView
                android:id="@+id/help_text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text9"
                android:text="@string/help_text10"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size"/>
            <TextView
                android:id="@+id/help_text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text10"
                android:text="@string/help_text11"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_text11"
                android:text="@string/help_text12"
                android:textColor="@color/black_1"
                android:textSize="@dimen/default_text_size_14sp"
                android:layout_marginBottom="@dimen/default_margin_size"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>



