<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_bookcover_default">
    <RelativeLayout
        android:id="@+id/screen_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.6"
        android:paddingBottom="@dimen/default_margin_size_2_1"
        android:paddingEnd="@dimen/default_margin_size_2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/screen_title_text"
            android:textSize="@dimen/default_text_size_7"
            android:layout_above="@+id/screen_content"
            android:layout_marginBottom="@dimen/default_margin_size"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/screen_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_content_text"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:layout_centerInParent="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/default_margin_size_3"
            android:src="@drawable/icon_horn_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_img_text"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/screen_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_week_text"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size_10sp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/screen_month"
            android:layout_marginEnd="@dimen/default_margin_size"/>
        <TextView
            android:id="@+id/screen_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_time_text"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            android:layout_above="@+id/screen_month"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/default_margin_size_1"
            android:layout_marginBottom="@dimen/default_margin_size_1"/>
        <TextView
            android:id="@+id/screen_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_month_text"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size_10sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
    <TextView
        android:id="@+id/screen_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_click_text"
        android:textColor="@color/blue"
        android:textSize="@dimen/default_text_size"
        android:layout_above="@+id/screen_bottom_linear"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/default_margin_size_2"/>
    <LinearLayout
        android:id="@+id/screen_bottom_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_margin_size_2_1"
        android:paddingBottom="@dimen/default_margin_size_2_1"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/default_margin_size_8">
        <TextView
            android:id="@+id/screen_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/blue"
            android:text="@string/screen_close_text"
            android:gravity="center"/>
        <TextView
            android:id="@+id/screen_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/screen_setting_text"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/blue"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>