<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin_size">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_1"
        android:textSize="@dimen/default_text_size_18sp"
        android:text="@string/book_header_left"/>
    <TextView
        android:id="@+id/book_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_header"
        android:textSize="@dimen/default_text_size_18sp"
        android:textColor="@color/blue"
        android:paddingStart="@dimen/default_margin_size_1"
        android:paddingEnd="@dimen/default_margin_size_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_1"
        android:textSize="@dimen/default_text_size_18sp"
        android:text="@string/book_header_right"/>
</LinearLayout>