<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin_size"
    android:background="@drawable/btn_background_radius"
    android:padding="@dimen/default_margin_size">
    <ImageView
        android:id="@+id/pk_modern_avatar"
        android:layout_width="@dimen/default_margin_size_5"
        android:layout_height="@dimen/default_margin_size_5"
        android:src="@drawable/user_avater"/>
    <TextView
        android:id="@+id/pk_modern_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_margin_size"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/pk_modern_avatar"
        android:text="@string/pk_error_name"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pk_modern_error"
        android:textColor="@color/black_1"
        android:textSize="@dimen/default_text_size_16sp"
        android:paddingStart="@dimen/default_margin_size"
        android:layout_toEndOf="@+id/pk_modern_avatar"
        android:layout_below="@+id/pk_modern_name"
        android:paddingTop="@dimen/default_margin_size_1"/>
    <TextView
        android:id="@+id/pk_modern_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/default_text_size_16sp"
        android:text="@string/pk_modern_time"
        android:textColor="@color/black_1"/>
    <TextView
        android:id="@+id/pk_modern_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pk_modern_word"
        android:textColor="@color/black_2"
        android:textSize="@dimen/default_text_size_14sp"
        android:layout_below="@+id/pk_modern_avatar"
        android:paddingTop="@dimen/default_margin_size"
        android:paddingBottom="@dimen/default_margin_size_2"/>
    <TextView
        android:id="@+id/pk_modern_know"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_pk_modern"
        android:text="@string/pk_modern_know"
        android:textColor="@color/black_1"
        android:textSize="@dimen/default_text_size_16sp"
        android:layout_below="@+id/pk_modern_avatar"
        android:layout_marginTop="@dimen/default_margin_size_2"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>