<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="@dimen/default_margin_size">
    <TextView
        android:id="@+id/pop_star_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_star_one"
        android:textSize="@dimen/default_text_size_12sp"
        android:textColor="@color/black"
        android:paddingTop="@dimen/default_margin_size_1"
        android:paddingBottom="@dimen/default_margin_size_1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_2" />

    <TextView
        android:id="@+id/pop_star_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_margin_size_1"
        android:paddingTop="@dimen/default_margin_size_1"
        android:text="@string/pop_star_two"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_2" />

    <TextView
        android:id="@+id/pop_star_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_star_three"
        android:textSize="@dimen/default_text_size_12sp"
        android:textColor="@color/black"
        android:paddingTop="@dimen/default_margin_size_1"
        android:paddingBottom="@dimen/default_margin_size_1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_2"/>

    <TextView
        android:id="@+id/pop_star_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_margin_size_1"
        android:paddingTop="@dimen/default_margin_size_1"
        android:text="@string/pop_star_four"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_2"/>

    <TextView
        android:id="@+id/pop_star_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_margin_size_1"
        android:paddingTop="@dimen/default_margin_size_1"
        android:text="@string/pop_star_five"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_12sp" />
</LinearLayout>